--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="visual-generator">
       <h2>Secure Password Generator</h2>
-      <textarea id="text-area" rows="17" cols="70" disabled> </textarea>
+      <div id="text-area"></div>
       <button id="generate">Generate Password</button>
     </div>
   </body>
