halfway through css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   </head>
   <body>
     <div class="visual-generator">
-      <h2>Secure Password Generator</h2>
-      <div id="text-area"></div>
+      <h2 id = spg >Secure Password Generator</h2>
+      <div id="text-area">
+      </div>
       <button id="generate">Generate Password</button>
     </div>
   </body>
