mostly done project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <h2 id = spg >Secure Password Generator</h2>
       <div id="text-area">
       </div>
-      <button id="generate">Generate Password</button>
+      <div id = "generate-in-div">
+        <button id = "generate">Generate Password</button>
+        <button id = "copy-and-paste">Copy To Clipboard</button>
+      </div>
     </div>
   </body>
   <script src="./scripts.js"></script>
