--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="visual-generator">
-      <h2 id = spg >Secure Password Generator</h2>
-      <div id="text-area">
-      </div>
-      <div id = "generate-in-div">
-        <button id = "generate">Generate Password</button>
-        <button id = "copy-and-paste">Copy To Clipboard</button>
+      <h2 id="spg">Secure Password Generator</h2>
+      <div id="text-area"></div>
+      <div id="generate-in-div">
+        <button id="generate">Generate Password</button>
+        <button id="copy-and-paste">Copy To Clipboard</button>
       </div>
     </div>
   </body>
